--- a/src/pages/details/cast/style.scss
+++ b/src/pages/details/cast/style.scss
@@ -13,7 +13,7 @@
         overflow-y: hidden;
         margin-right: -20px;
         margin-left: -20px;
-        // padding: 0 20px;
+        padding: 0 20px;
         @include md {
             margin: 0;
             padding: 0;
